8268470: CDS dynamic dump asserts with JFR RecordingStream